test/cases/compile_errors/shifting_RHS_is_log2_of_LHS_int_bit_width.zig
export fn entry(x: u8, y: u8) u8 {
    return x << y;
}

// error
// backend=stage2
// target=native
//
// :2:17: error: expected type 'u3', found 'u8'
